# dregheap

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: lib.rs  protocol.rs
server/: Cargo.toml
server/src/: config.rs  errors.rs  handler.rs  lib.rs  main.rs  server.rs  store.rs
server/src/tests/: e2e.rs  mod.rs
server/src/tests/unit/: handler.rs
src/: cli.rs  config.rs  errors.rs  handler.rs  lib.rs  main.rs  protocol.rs  store.rs
