[package]
name = "dregheap"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = { version = "1", features = ["full"] }
serde_repr = "0.1"
envy = "0.4"
log = "0.4.33"
logforth = { version = "0.30.1", features = ["starter-log"] }
