
[workspace]
resolver = "2"
members = [
    "server",
    "protocol"
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = { version = "1" }
log = "0.4.33"
logforth = { version = "0.30.1", features = ["starter-log"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["full"] }
