[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }

serde = { workspace = true }
rmp-serde = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["full"] }
envy = "0.4"
