[package]
name = "dreg_server"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }

serde = { workspace = true }
rmp-serde = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

envy = "0.4"
